# 3sem

./: main.c  terminal_emulator.c
task1_terminal/: CMakeLists.txt  README.md  terminal.h
task1_terminal/include/: terminal.h
task2_duplex_pipe/: CMakeLists.txt  README.md  main.c
task2_duplex_pipe/include/: data_processing.h  dup_pipe.h
task2_duplex_pipe/src/: data_processing.c  dup_pipe.c
task3_integral_monte-carlo/: README.md
task3_integral_monte-carlo/include/: integral.h
task3_integral_monte-carlo/src/: functions.c  integral.c
task3_ipc/: CMakeLists.txt  README.md
task3_ipc/common/include/: utils.h
task3_ipc/common/src/: utils.c
task3_ipc/fifo/: CMakeLists.txt
task3_ipc/fifo/include/: fifo.h
task3_ipc/fifo/src/: main.c
task3_ipc/msg_queue/: CMakeLists.txt
task3_ipc/msg_queue/include/: msg_queue.h
task3_ipc/msg_queue/src/: main.c
task3_ipc/shmem/: CMakeLists.txt
task3_ipc/shmem/include/: shmem.h
task3_ipc/shmem/src/: main.c
task4_integral_monte-carlo/: CMakeLists.txt  main.c
task4_integral_monte-carlo/config/: config.h
task4_integral_monte-carlo/include/: functions.h
task5_signals/: CMakeLists.txt  README.md  main.c
task5_signals/include/: config.h  funcs.h
task5_signals/src/: funcs.c
